rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_from_table.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"select generate_series(1, oid) from pg_catalog.pg_type where oid in (16,17);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------------------+
| generate_series(Int64(1),pg_type.oid) |
+---------------------------------------+
| 1                                     |
| 2                                     |
| 3                                     |
| 4                                     |
| 5                                     |
| 6                                     |
| 7                                     |
| 8                                     |
| 9                                     |
| 10                                    |
| 11                                    |
| 12                                    |
| 13                                    |
| 14                                    |
| 15                                    |
| 16                                    |
| 1                                     |
| 2                                     |
| 3                                     |
| 4                                     |
| 5                                     |
| 6                                     |
| 7                                     |
| 8                                     |
| 9                                     |
| 10                                    |
| 11                                    |
| 12                                    |
| 13                                    |
| 14                                    |
| 15                                    |
| 16                                    |
| 17                                    |
+---------------------------------------+
