rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_i64_1.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series(-5, 5);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-------------------------------------+
| generate_series(Int64(-5),Int64(5)) |
+-------------------------------------+
| -5                                  |
| -4                                  |
| -3                                  |
| -2                                  |
| -1                                  |
| 0                                   |
| 1                                   |
| 2                                   |
| 3                                   |
| 4                                   |
| 5                                   |
+-------------------------------------+
