rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_timestamp_3_args_1h_30m_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2024-07-25 00:00:00'::timestamp, '2024-07-25 12:00:00'::timestamp, '1 hours 30 minutes'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2024-07-25 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2024-07-25 12:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("1 hours 30 minutes") AS Interval(MonthDayNano))) |
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 2024-07-25T00:00:00.000                                                                                                                                                                                       |
| 2024-07-25T01:30:00.000                                                                                                                                                                                       |
| 2024-07-25T03:00:00.000                                                                                                                                                                                       |
| 2024-07-25T04:30:00.000                                                                                                                                                                                       |
| 2024-07-25T06:00:00.000                                                                                                                                                                                       |
| 2024-07-25T07:30:00.000                                                                                                                                                                                       |
| 2024-07-25T09:00:00.000                                                                                                                                                                                       |
| 2024-07-25T10:30:00.000                                                                                                                                                                                       |
| 2024-07-25T12:00:00.000                                                                                                                                                                                       |
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
