rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_timestamp_3_args_20s_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2024-07-25 00:00:00'::timestamp, '2024-07-25 00:01:30'::timestamp, '20 seconds'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2024-07-25 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2024-07-25 00:01:30") AS Timestamp(Nanosecond, None)),CAST(Utf8("20 seconds") AS Interval(MonthDayNano))) |
+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 2024-07-25T00:00:00.000                                                                                                                                                                               |
| 2024-07-25T00:00:20.000                                                                                                                                                                               |
| 2024-07-25T00:00:40.000                                                                                                                                                                               |
| 2024-07-25T00:01:00.000                                                                                                                                                                               |
| 2024-07-25T00:01:20.000                                                                                                                                                                               |
+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
