rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_timestamp_3_args_2days_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2024-07-23 00:00:00'::timestamp, '2024-07-28 00:00:00'::timestamp, '2 days'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2024-07-23 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2024-07-28 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2 days") AS Interval(MonthDayNano))) |
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 2024-07-23T00:00:00.000                                                                                                                                                                           |
| 2024-07-25T00:00:00.000                                                                                                                                                                           |
| 2024-07-27T00:00:00.000                                                                                                                                                                           |
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
