rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_timestamp_3_args_2months_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2024-07-23 00:00:00'::timestamp, '2024-10-28 00:00:00'::timestamp, '2 months'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2024-07-23 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2024-10-28 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2 months") AS Interval(MonthDayNano))) |
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 2024-07-23T00:00:00.000                                                                                                                                                                             |
| 2024-09-23T00:00:00.000                                                                                                                                                                             |
+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
