rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_timestamp_3_args_2years_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2014-07-23 00:00:00'::timestamp, '2024-10-28 00:00:00'::timestamp, '2 years'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2014-07-23 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2024-10-28 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2 years") AS Interval(MonthDayNano))) |
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 2014-07-23T00:00:00.000                                                                                                                                                                            |
| 2016-07-23T00:00:00.000                                                                                                                                                                            |
| 2018-07-23T00:00:00.000                                                                                                                                                                            |
| 2020-07-23T00:00:00.000                                                                                                                                                                            |
| 2022-07-23T00:00:00.000                                                                                                                                                                            |
| 2024-07-23T00:00:00.000                                                                                                                                                                            |
+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
