rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_timestamp_3_args_6y_5m_4d_3h_2min_1s_interval.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series('2010-01-01 00:00:00'::timestamp, '2024-07-25 00:01:30'::timestamp, '6 years 5 months 4 days 3 hours 2 minutes 1 seconds'::interval);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| generate_series(CAST(Utf8("2010-01-01 00:00:00") AS Timestamp(Nanosecond, None)),CAST(Utf8("2024-07-25 00:01:30") AS Timestamp(Nanosecond, None)),CAST(Utf8("6 years 5 months 4 days 3 hours 2 minutes 1 seconds") AS Interval(MonthDayNano))) |
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 2010-01-01T00:00:00.000                                                                                                                                                                                                                        |
| 2016-06-05T03:02:01.000                                                                                                                                                                                                                        |
| 2022-11-09T06:04:02.000                                                                                                                                                                                                                        |
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
