rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__has_any_column_privilege.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT\n                    relname,\n                    has_any_column_privilege('ovr', relname, 'SELECT') \\\"select\\\",\n                    has_any_column_privilege('ovr', relname, 'INSERT') \\\"insert\\\",\n                    has_any_column_privilege('ovr', relname, 'DELETE') \\\"delete\\\",\n                    has_any_column_privilege('ovr', relname, 'UPDATE') \\\"update\\\"\n                FROM pg_class\n                ORDER BY relname ASC\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------+--------+--------+--------+--------+
| relname                   | select | insert | delete | update |
+---------------------------+--------+--------+--------+--------+
| KibanaSampleDataEcommerce | true   | false  | false  | false  |
| Logs                      | true   | false  | false  | false  |
| MultiTypeCube             | true   | false  | false  | false  |
| NumberCube                | true   | false  | false  | false  |
| WideCube                  | true   | false  | false  | false  |
| pg_class                  | true   | false  | false  | false  |
+---------------------------+--------+--------+--------+--------+
