rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__has_any_column_privilege_default_user.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT\n                    relname,\n                    has_any_column_privilege(relname, 'select') \\\"select\\\",\n                    has_any_column_privilege(relname, 'insert') \\\"insert\\\",\n                    has_any_column_privilege(relname, 'delete') \\\"delete\\\",\n                    has_any_column_privilege(relname, 'update') \\\"update\\\"\n                FROM pg_class\n                ORDER BY relname ASC\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------+--------+--------+--------+--------+
| relname                   | select | insert | delete | update |
+---------------------------+--------+--------+--------+--------+
| KibanaSampleDataEcommerce | true   | false  | false  | false  |
| Logs                      | true   | false  | false  | false  |
| MultiTypeCube             | true   | false  | false  | false  |
| NumberCube                | true   | false  | false  | false  |
| WideCube                  | true   | false  | false  | false  |
+---------------------------+--------+--------+--------+--------+
