rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__has_schema_privilege_default_user.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT\n                    nspname,\n                    has_schema_privilege(nspname, 'CREATE') create_top,\n                    has_schema_privilege(nspname, 'create') create_lower,\n                    has_schema_privilege(nspname, 'USAGE') usage_top,\n                    has_schema_privilege(nspname, 'usage') usage_lower\n                FROM pg_namespace\n                ORDER BY nspname ASC\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+--------------------+------------+--------------+-----------+-------------+
| nspname            | create_top | create_lower | usage_top | usage_lower |
+--------------------+------------+--------------+-----------+-------------+
| information_schema | false      | false        | true      | true        |
| pg_catalog         | false      | false        | true      | true        |
| public             | false      | false        | true      | true        |
+--------------------+------------+--------------+-----------+-------------+
